--- a/themes/default/print.css
+++ b/themes/default/print.css
@@ -11,7 +11,7 @@ ol.contentlink-bc {list-style: none; padding-left: 0;}
 ol.contentlink-bc li {display: inline-block;}
 .part.hot_drinks .imgwrap {
   max-width: 14em;
-  padding-bottom: 0 !important;
+  padding-bottom: 0!important;
   height: 11em;
-  margin: 0 auto;
+  margin: 0 auto
 }
