--- a/themes/print-listek.css
+++ b/themes/print-listek.css
@@ -14,6 +14,9 @@ body {
   font-family: 'Rasa', serif !important;
   font-size: 11pt;
 }
+a {
+  color: black;
+}
 /*
 body:before {
   content: url(/files/piktogram.png);
@@ -31,11 +34,14 @@ h1 {
   margin-top: 10mm !important;
   font-weight: 500;
 }
-h2 {
+h2, h3 {
   margin-top: 15mm;
   font-size: 21pt;
   text-transform: uppercase;
   font-weight: 500;
+}
+h3 {
+  font-size: 18pt;
 }
 h1 + p.description {
   font-size: 15pt;
