--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -76,6 +76,10 @@ ol.contentlink-bc > li+li:before {
 .list.multiple {
   clear: both;
 }
+.references .list.multiple {
+  padding: 0;
+  max-width: 100%;
+}
 /*********************************/
 #header {
   position: absolute;
@@ -384,7 +388,8 @@ svg.fa-facebook {
   background-size: cover !important;
 }
 .part > div {
-  padding: 0.01em 0
+  padding: 0.01em 0;
+  max-width: 100%;
 }
 .part.hamburgers_and_pasta .description:after,
 .part.kids_menu .description:after,
@@ -705,13 +710,15 @@ svg.fa-facebook {
 .part.references {
   padding-bottom: 2em;
   margin: 0 auto;
+  max-width: 100%;
 }
 .part.references dl {
   text-align: center;
   max-width: 25em;
   padding-bottom: 5em !important;
   min-height: 27em;
-  width: auto;
+  width: 25em;
+  max-width: 100%;
 }
 .part.references .citation dt {
   max-width: 6em;
@@ -726,9 +733,8 @@ svg.fa-facebook {
 }
 .part.references dt + dd {
   font-size: 1.5em;
-  width: 15em;
-  max-width: 100%;
   margin: 1em auto 0.5em auto;
+  width: 100%;
 }
 .part.references dt + dd q:before,
 .part.references dt + dd q:after {
