--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -30,6 +30,7 @@ h1 {
   font-size: 3em;
   font-weight: 400;
   text-align: center;
+  overflow-wrap: break-word;
 }
 @media all and (min-width: 25em) {
   h1 {
@@ -1067,6 +1068,36 @@ dl.klima dt:first-child .imgwrap {
   margin-right: 0.25em;
   width: 1.2em;
   color: white;
+}
+#footer ul:last-child li:not(.print) {
+  width: 100%;
+  margin: 0.25em 0;
+  min-height: 2.2em;
+  display: flex;
+  align-items: center;
+}
+#footer ul:last-child li:nth-child(5) > span {
+  margin-left: 0.25em;
+}
+#footer ul:last-child .seedling {
+  display: flex;
+  align-items: center;
+}
+#footer ul:last-child .seedling:before {
+  order: 1;
+  margin-right: 0;
+  margin-left: 0.25em;
+}
+@media all and (min-width: 42em) {
+  #footer ul:last-child li:not(.print) {
+    width: auto;
+    margin-right: 1em;
+  }
+  #footer ul:last-child .seedling:before {
+    order: 0;
+    margin-right: 0.25em;
+    margin-left: 0;
+  }
 }
 /*********************************/
 body[data-link="/vinny_listek"] #content > .section,
